pr: fix Firefix flickers in the Discover screen

--- a/src/routes/Discover/styles.less
+++ b/src/routes/Discover/styles.less
@@ -46,6 +46,7 @@
             align-self: stretch;
             display: flex;
             flex-direction: column;
+            contain: strict;
 
             .meta-items-container {
                 margin-top: calc(var(--selectable-inputs-assumed-height) * -1);
